fix(UI): make title smaller and prevent wrapping in mobile

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -2122,10 +2122,11 @@ html {
 }
 
 .home-hero-title {
-  font-size: 2.5rem;
+  font-size: 2rem;
   font-weight: 900;
   margin-bottom: 1rem;
   letter-spacing: 2px;
+  white-space: nowrap;
 }
 
 .home-hero-subtitle {
